--- a/src/Pokecard.css
+++ b/src/Pokecard.css
@@ -1,3 +1,13 @@
 .Pokecard {
-  border: 2px solid aquamarine;
+  
+  width: 300px;
+  padding: 10px;
+  margin: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  text-align: center;
+  background-color: rgb(248, 250, 250);
+  
+}
+.Pokecard-data {
+  font-size: 80%;
 }
