--- a/src/Pokecard.css
+++ b/src/Pokecard.css
@@ -11,3 +11,18 @@
 .Pokecard-data {
   font-size: 80%;
 }
+.Pokecard-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 250px;
+  background-color: rgb(114, 102, 104);
+}
+
+
+
+.Pokecard img:hover {
+  transform: scale(1.25);
+  opacity: 0.7;
+  transition: ease 500ms;
+}
